@startuml security-services.puml

skinparam classAttributeIconSize 0

class UserController
class UserService
interface UserRepository

class SellerController
class SellerService
interface SellerRepository

class JwtService

UserController --> UserService
UserService --> UserRepository
UserService --> JwtService

SellerController --> SellerService
SellerService --> SellerRepository
SellerService --> UserRepository

@enduml
